--- a/FE/Views/Shared/_Layout.cshtml
+++ b/FE/Views/Shared/_Layout.cshtml
@@ -8,9 +8,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/DatePicker.css" />
     <script src="https://kit.fontawesome.com/61ba0c914b.js" crossorigin="anonymous"></script>
-    <!-- Google Fonts -->
+    <!-- Google Fonts And Icons -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
           rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL@20..48,400..700,0..1&icon_names=group,group_add,left_panel_open,person,person_add" rel="stylesheet" />
     <!-- MDB -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/8.1.0/mdb.min.css"
           rel="stylesheet" />
@@ -73,7 +74,7 @@
         <partial name="_ValidationScriptsPartial" />
     }
 
-<script>
+    <script>
         // Kết nối tới Hub SignalR từ API
         const connection = new signalR.HubConnectionBuilder()
                                     .withUrl('https://localhost:7181/messageHub?userid=@(User.Claims.FirstOrDefault(c => c.Type == "UserId").Value)') // URL API SignalR hub
@@ -170,7 +171,7 @@
                     // Scroll Message tới cuối cùng
                     scrollToBottom()
 
-                    // Update lastread message cho người nhận 
+                    // Update lastread message cho người nhận
                     // Vì người gửi đã được cập nhật latest mesage lúc gửi tin nhắn
                     if (TargetId === response.data.senderId) {
                         updateConversationLatestMessage(TargetId)
@@ -178,7 +179,7 @@
                 }
             }
         });
-</script>
+    </script>
 
     <script>
         // Chuyển giao diện nhắn tin với User
@@ -214,7 +215,7 @@
             }
             // Case 2: Tap Message hiện tại của UserId
             else {
-                
+
             }
         }
 
