Hoàng Nhi - Update code

--- a/FE/Views/Shared/_Layout.cshtml
+++ b/FE/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/4.0.0/jquery.validate.unobtrusive.js"></script>
     <!-- Custom css -->
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/FullPalette.css" asp-append-version="true" />
     <!-- Signalr -->
     <script src="~/lib/microsoft/signalr/dist/browser/signalr.min.js"></script>
     <!-- Datepicker -->
