--- a/FE/Views/Home/Message/_MessagePartial.cshtml
+++ b/FE/Views/Home/Message/_MessagePartial.cshtml
@@ -251,7 +251,7 @@
         }
     });
 
-    function ShowPopupAddFriend() {
+    @*function ShowPopupAddFriend() {
         $.ajax({
             url: '@Url.Action("ShowAddFriendPopup", "Friend")',
             type: 'GET',
@@ -260,7 +260,7 @@
                 ShowModal(data, "md")
             }
         });
-    }
+    }*@
 
     function GetFriendRequestStatus() {
         $.ajax({
