--- a/FE/Views/Home/Contact/FriendRequest/_TabFriendRequestPartial.cshtml
+++ b/FE/Views/Home/Contact/FriendRequest/_TabFriendRequestPartial.cshtml
@@ -2,9 +2,12 @@
     @* Header *@
     <div class="p-3 bg-white d-flex align-items-center"
          style="max-height: 80px; border-radius: 12px; box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;">
-        <img src="~/asset/Add-Friend.png"
+        @*<img src="~/asset/Add-Friend.png"
              width="30"
-             style="margin-right: 10px; color: black" />
+             style="margin-right: 10px; color: black" />*@
+        <span class="material-symbols-outlined me-2 fs-1 text-brown-900">
+            person_add
+        </span>
         <span class="fw-bold fs-6">Lời mời kết bạn</span>
     </div>
 
@@ -21,7 +24,6 @@
 </div>
 
 <script>
-    GetFriendRequestStatus = null
     $(document).ready(function () {
         // Gọi hàm để lấy danh sách lời mời kết bạn
         getFriendRequest('False');
