Hoàng Nhi - Xử lý CSS
Changes
- Thay đổi Css giao diện
- Thêm hoạt ảnh loading khi tải thêm các converstion
- Thêm các variable color css

--- a/FE/Views/Home/Contact/_ContactPartial.cshtml
+++ b/FE/Views/Home/Contact/_ContactPartial.cshtml
@@ -23,7 +23,7 @@
         <span class="material-symbols-outlined me-2 fs-1 text-brown-900">
             person
         </span>
-        <span class="text-brown-900 fs-6 py-1" 
+        <span class="text-black fs-6 py-1" 
               style="line-height: 20px;
                      text-transform: none;
                      font-weight: 500;
@@ -36,7 +36,7 @@
         <span class="material-symbols-outlined me-2 fs-1 text-brown-900">
             group
         </span>
-        <span class="text-brown-900 fs-6 py-1"
+        <span class="text-black fs-6 py-1"
               style="line-height: 20px;
              text-transform: none;
              font-weight: 500;
@@ -49,7 +49,7 @@
         <span class="material-symbols-outlined me-2 fs-1 text-brown-900">
             person_add
         </span>
-        <span class="text-brown-900 fs-6 py-1"
+        <span class="text-black fs-6 py-1"
               style="line-height: 20px;
               text-transform: none;
               font-weight: 500;"
@@ -62,7 +62,7 @@
         <span class="material-symbols-outlined me-2 fs-1 text-brown-900">
             group_add
         </span>
-        <span class="text-brown-900 fs-6 py-1"
+        <span class="text-black fs-6 py-1"
               style="line-height: 20px;
               text-transform: none;
               font-weight: 500;"
