--- a/FE/Views/Home/Index.cshtml
+++ b/FE/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
 
     .icon-Functions {
         padding: 12px 12px 12px 4px;
-        color: black;
+        color: var(--color-brown-900);
         font-size: 20px
     }
 
@@ -114,7 +114,7 @@
                         aria-controls="pills-conversation"
                         aria-selected="true"
                         onclick="SwitchToTabFunctions('tab-conversation')">
-                    <i class="fa-regular fa-comment icon-Functions"
+                    <i class="fa-solid fa-comment icon-Functions"
                        style=""></i>
                     <span class="text-Functions">Đoạn chat</span>
                 </button>
