--- a/FE/Views/Shared/ConfigProfile/_ProfilePicture.cshtml
+++ b/FE/Views/Shared/ConfigProfile/_ProfilePicture.cshtml
@@ -22,7 +22,7 @@
             data-mdb-ripple-init
             data-mdb-ripple-color="dark"
             onclick="ChangeWidthSideNav()">
-        <span class="material-symbols-outlined position-absolute text-black fs-3" style=" top: 50%; left: 50%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%);">
+        <span class="material-symbols-outlined position-absolute text-brown-900 fs-3" style=" top: 50%; left: 50%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%);">
             left_panel_open
         </span>
     </button>
